--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ body {
 /**
 --------------------- ALL PAGES GENERAL STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
-#home-div, #activity-div, #note-div, #notes-list-div, #buy-me-a-coffee-div, #about-div, #not-found-page-div{
+#home-div, #activity-div, #note-div, #notes-list-div, #buy-me-a-coffee-div, #about-div, #not-found-page-div, #my-path-div{
   background: linear-gradient(135deg, #2C3E50, #4CA1AF);  /* Background Gradient */
   display: flex;
   flex-direction: column;
@@ -229,25 +229,58 @@ body {
 /**
 --------------------- MYPATH PAGE SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
+
 #my-path-div {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;  /* This ensures the cards inside stack in rows*/
   align-items: center;
 }
 
 #my-path-div .path-card{
   height: 25vh;
-  width: 80vw;
+  width: calc(33.3333% - 30px); /* Updated this line */
   background-color: rgba(240, 248, 255, 0.05);
-  margin-top: 20px;
+  margin: 10px;  /* Updated this line */
   border: 1px solid whitesmoke;
   border-radius: 25px;
 }
 
-#my-path-div:nth-last-child(1){
-  margin-bottom: 20px; /* Last card at the bottom of the page has spacing at the bottom too*/
+#my-path-div .path-card #path-desc{
+  text-align: center;
+}
+
+
+#path-images{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#path-images img {
+  width: auto;
+  height: 100px;
+  margin-left: 10px;
+}
+
+#my-path-div .path-card:hover{
+  background-color: rgba(240, 248, 255, 0);
+  color: #b6f8ff;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
+  border: 1px solid whitesmoke;
+  transform:translateY(-5px);
+  cursor: pointer;
 }
 
 #my-path-div h1{
   text-align: center;
+}
+
+.custom-file-upload {
+  padding: 10px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
 }
