--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,15 @@ body {
 /**
 --------------------- ALL PAGES GENERAL STYLING (AT THE TOP ABOVE ALL OTHER PAGES STYLED) ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
-#home-div, #activity-div, #note-div, #notes-list-div, #buy-me-a-coffee-div, #about-div, #not-found-page-div, #my-path-div{
+#home-div, 
+#activity-div, 
+#note-div, 
+#notes-list-div, 
+#buy-me-a-coffee-div, 
+#about-div, 
+#not-found-page-div, 
+#my-path-div, 
+#sign-up-form{
   background: linear-gradient(135deg, #2C3E50, #4CA1AF);  /* Background Gradient */
   display: flex;
   flex-direction: column;
@@ -198,6 +206,57 @@ body {
 
 
 /**
+--------------------- SIGN UP PAGE SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+*/
+
+#sign-up-form {
+  font-size: 32px;
+  padding: 40px;
+}
+
+#sign-up-form input {
+  font-size: 24px;
+  width: 400px;
+  height: 40px;  /* Adjusted height */
+  border: 3px solid #ccc;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  background-color: #2c3e5058;
+  color:whitesmoke;
+}
+
+#sign-up-form input:focus {
+  outline: none;
+  border: 3px solid rgba(0, 0, 255, 0.26);
+}
+
+#sign-up-form label {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+#sign-up-form button {
+  margin-top: 30px;
+  padding: 10px 30px;
+  font-size: 1.5rem;
+  border: 1px solid whitesmoke;
+  border-radius: 15px;
+  background-color: #ECF0F1;
+  color: #333;
+  cursor: pointer; 
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+}
+
+#sign-up-form button:hover {
+  background-color: transparent;
+  border: 3px solid rgb(22, 22, 22);
+  color: #000000;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+/**
 --------------------- ABOUT PAGE SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
 
@@ -219,10 +278,37 @@ body {
 #notes-list-div #view-notes-div,
 #notes-list-div #favourite-notes-div {
   flex: 1;
-  text-align: center;
   margin-right: 5%;
   background-color: #2c3e5058;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* horizontally center the children*/
+}
+
+#notes-list-div #view-notes-div a,
+#notes-list-div #favourite-notes-div a{
+  text-decoration: none;
+}
+
+#notes-list-div #view-notes-div p,
+#notes-list-div #favourite-notes-div p{
+  color:whitesmoke;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+#notes-list-div #view-notes-div p:hover,
+#notes-list-div #favourite-notes-div p:hover{
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3 ease 0s;
+}
+
+#notes-list-div #view-notes-div img{
+  height: 100px;
+  width: auto;
 }
 
 #notes-list-div #title {
