fixed async waiting and displaying notes ui

--- a/src/App.css
+++ b/src/App.css
@@ -316,7 +316,8 @@ body {
 /**
 --------------------- NOTE PAGE SPECIFIC STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 */
-#note-div{
+#note-description-div p{
+  white-space: pre-wrap
 
 }
 
@@ -675,5 +676,5 @@ body {
 */
 
 #community-div{
-
+  
 }
